2005-05-14  Stephen Deasey  <sdeasey@users.sf.net>

	* nsperm/Makefile: Use new TCL variable to install shared Tcl
	files.
	
	* include/Makefile.module.in: Add new MODNAME and TCL Makefile
	variables which modules can use to specify a list of shared tcl
	files to install.

2005-05-13  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/init.tcl (_ns_sourcemodule): Module's shared tcl directory
	was incorrectly set to private directory.

2005-05-11  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/urlencode.c: added URLDECODE_RELAXED (undefined per default)
	to be able to adjust url decoding to replace '+' to ' ', thus being
	more forgiving to urls encoded with (broken) AOLserver urlencoder.

2005-05-04  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/unix.c: modified poll() wrapper to work on Darwin 6.x 
	in addition to 7.x and 8.x versions. Also, heavily reformatted
	poll() wrapper to be easily readable.

	* nsd/tclmisc.c: conditionally define u_int32_t and u_int8_t
	on Darwin since it has the definition already. 

2005-04-30  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/nsmain.c: Don't assign chroot directory as default server
	name.  Simplify option parsing error messages.

2005-04-27  Vlad Seryakov  <seryakov@users.sf.net>

	nsd/tclmisc.c: updated ns_uudecode to return possibly binary decoded data
	in the Tcl_Obj result instead of string result

2005-04-26  Stephen Deasey  <sdeasey@users.sf.net>

	* include/nsdb.h:
	* nsdb/nsdb.h:
	* nsdb/Makefile: Move nsdb public header file into module directory.

	* include/nsextmsg.h:
	* include/nspd.h: Move stray headers into external modules.

	* include/Makefile.module.in:
	* include/Makefile.global.in:
	* Makefile: Add new module variable LIBHDRS which is the list of
	headers which should be installed for other modules to link
	against (e.g. nsdb.h).

	* include/Makefile.module.in:
	* include/Makefile.global.in: Reindent code for consistency prior
	to making changes.
